# gnidEngine

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  Makefile  README.md  camera.cpp  camera.hpp  camera_node.c  camera_node.h  config.lua  cursorMode.lua  game.lua  gnid  hashtable.c  hashtable.h  keys.lua  linkedlist.c  linkedlist.h  luagl.c  luagl.h  luamath3d.c  luamath3d.h  luamatrix.c  luamatrix.h  luapng.c  luapng.h  main.c  main.cpp  material.hpp  materials.lua  math3d.c  math3d.h  matrix.c  matrix.h  models.lua  node.c  node.cpp  node.h  node.hpp  (+23 more)
docs/html/: annotated.html  box_8hpp_source.html  camera_8hpp_source.html  classObjParser-members.html  classObjParser.html  classPhongMaterial-members.html  classPhongMaterial.html  classPhongShader-members.html  classPhongShader.html  classes.html  classgnid_1_1Binding-members.html  classgnid_1_1Binding.html  classgnid_1_1Box-members.html  classgnid_1_1Box.html  classgnid_1_1Camera-members.html  classgnid_1_1Camera.html  classgnid_1_1Collider-members.html  classgnid_1_1Collider.html  classgnid_1_1Collision-members.html  classgnid_1_1Collision.html  classgnid_1_1CollisionEvent-members.html  classgnid_1_1CollisionEvent.html  classgnid_1_1EmptyNode-members.html  classgnid_1_1EmptyNode.html  classgnid_1_1Event-members.html  classgnid_1_1Event.html  classgnid_1_1GameBase-members.html  classgnid_1_1GameBase.html  classgnid_1_1Gnid-members.html  classgnid_1_1Gnid.html  classgnid_1_1LightNode-members.html  classgnid_1_1LightNode.html  classgnid_1_1Material-members.html  classgnid_1_1Material.html  classgnid_1_1Node-members.html  classgnid_1_1Node.html  classgnid_1_1Renderer-members.html  classgnid_1_1Renderer.html  classgnid_1_1RendererMesh-members.html  classgnid_1_1RendererMesh.html  (+109 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  (+5 more)
game/: Explosion.lua  Light.lua  ObjectSpawn.lua  Pistol.lua  Player.lua  PlayerSpawn.lua  SphereMonster.lua
glad/include/glad/: glad.h
glad/src/: glad.c
include/: box.hpp  camera.hpp  collider.hpp  collisionevent.hpp  collisionpruner.hpp  emptynode.hpp  event.hpp  gamebase.hpp  gnid.hpp  kdtree.hpp  lightnode.hpp  material.hpp  node.hpp  obj_parser.hpp  phongshader.hpp  renderer.hpp  renderernode.hpp  rigidbody.hpp  scene.hpp  shader.hpp  shape.hpp  spatialnode.hpp
include/gnid/: ambientlight.hpp  box.hpp  camera.hpp  capsule.hpp  collider.hpp  collision.hpp  collisionevent.hpp  collisionpruner.hpp  directionallight.hpp  emptynode.hpp  event.hpp  gamebase.hpp  hull.hpp  kdtree.hpp  lightbuilder.hpp  lightnode.hpp  material.hpp  modelbuilder.hpp  node.hpp  obj_parser.hpp  objparser.hpp  observable.hpp  observer.hpp  phongshader.hpp  pointlight.hpp  renderer.hpp  renderernode.hpp  rigidbody.hpp  scene.hpp  shader.hpp  shape.hpp  spatialnode.hpp  sphere.hpp  texture.hpp  tmdparser.hpp  utils.hpp
include/gnid/glad/: glad.h
include/gnid/matrix/: Makefile  README.md  math3d.c  matrix.h  matrix.hpp
maps/: tmp.lua  tmp2.lua
mesh/: cubeMesh.lua
mesh/tmd/: test.tmd
models/: arm1.tmd  explosion1.tmd  goal1.tmd  light1.tmd  objectSpawn1.tmd  pistol1.tmd  playerSpawn1.tmd  redDot1.tmd  shotgun1.tmd  sphereMonster1.tmd
octree/: Octree.lua
src/: box.cpp  camera.cpp  collider.cpp  kdtree.cpp  lightnode.cpp  main.cpp  node.cpp  phongshader.cpp  renderer.cpp  renderernode.cpp  rigidbody.cpp  scene.cpp  spatialnode.cpp
src/blender/: operator_export_tmd.py
src/gnid/: ambientlight.cpp  box.cpp  camera.cpp  capsule.cpp  collider.cpp  collision.cpp  directionallight.cpp  gamebase.cpp  hull.cpp  kdtree.cpp  lightbuilder.cpp  lightnode.cpp  modelbuilder.cpp  node.cpp  objparser.cpp  phongshader.cpp  pointlight.cpp  renderer.cpp  renderernode.cpp  rigidbody.cpp  scene.cpp  spatialnode.cpp  sphere.cpp  texture.cpp  utils.cpp
src/gnid/glad/: glad.c
src/tests/: box.cpp  gamebase.cpp  lights.cpp  objparser.cpp  phongshader.cpp  texture.cpp
tests/: test  test.cpp  testbox.cpp
wrap/: Action.lua  ActionPlayer.lua  AnimationCurve.lua  Bone.lua  Camera.lua  Component.lua  GameObject.lua  IndexArray.lua  KdTree.lua  Material.lua  Mesh.lua  MeshRenderer.lua  PointCloud.lua  SampledAnimationCurve.lua  Scene.lua  ShaderProgram.lua  Skeleton.lua  SkinnedMesh.lua  Text.lua  Texture2D.lua  Transform.lua  VertexArray.lua
